--- a/public/index.html
+++ b/public/index.html
@@ -16,25 +16,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Google Fonts Here -->
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Signika&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
+    
 
-      </style>
-
-
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <!-- GF Ends -->
-    <!-- Firebase Scripts Here -->
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
-
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-analytics.js"></script>
 
 
     <title>React App</title>
@@ -44,4 +27,15 @@
     <div id="root"></div>
    
   </body>
+  <style>
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Oxygen&family=Roboto&family=Signika&display=swap');
+</style>
+  
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+   
+<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
+
+
+<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-analytics.js"></script>
 </html>
